--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
+    "bn.js": "^5.2.1",
     "firebase": "^10.7.1",
+    "framer-motion": "^11.0.22",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.19.0",
     "redux-persist": "^6.0.0",
-    "swiper": "^11.0.5"
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
