--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "web3": "^4.5.0"
